<resources>
    <string name="app_name">CastParty2</string>
    <string name="home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="party">Party</string>
    <string name="podcasts">Podcasts</string>
    <string name="saved">Saved</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="intent_string">Join me on CastParty with code %1s</string>
</resources>